(library
 (name bopkit_bdd_cli)
 (public_name bopkit.bdd-command)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Base
  -open
  Fpath_base
  -open
  Stdio
  -open
  Cmdlang)
 (libraries
  base
  bit_utils
  bopkit_bdd
  bopkit_block
  cmdlang
  core
  fpath
  fpath-base
  pp
  stdio)
 (lint
  (pps ppx_js_style -check-doc-comments))
 (preprocess
  (pps
   -unused-type-warnings=force
   ppx_compare
   ppx_enumerate
   ppx_hash
   ppx_here
   ppx_let
   ppx_sexp_conv
   ppx_sexp_value)))
