(library
 (name bopkit_bdd_command)
 (public_name bopkit.bdd-command)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Fpath_base
  -open
  Core)
 (libraries bit_utils bopkit_bdd bopkit_block core fpath fpath-base pp)
 (lint
  (pps ppx_js_style -check-doc-comments))
 (preprocess
  (pps
   ppx_compare
   ppx_enumerate
   ppx_hash
   ppx_here
   ppx_let
   ppx_sexp_conv
   ppx_sexp_value)))
