(ocamllex lexer)

(menhir
 (modules parser))

(library
 (name bopkit_block)
 (public_name bopkit.block)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Stdio
  -open
  Cmdlang)
 (libraries
  base
  bit_utils
  cmdlang
  cmdlang-cmdliner-runner
  cmdliner
  core
  stdio
  unix)
 (lint
  (pps ppx_js_style))
 (preprocess
  (pps
   -unused-type-warnings=force
   ppx_compare
   ppx_enumerate
   ppx_hash
   ppx_here
   ppx_let
   ppx_sexp_conv
   ppx_sexp_value)))
