(library
 (name bopkit_cds_optimizer)
 (public_name bopkit.cds-optimizer)
 (flags :standard -w +a-4-40-41-42-44-45-48-66 -warn-error +a -open Core)
 (libraries bit_utils bopkit bopkit_circuit core)
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess
  (pps
   -unused-type-warnings=force
   ppx_compare
   ppx_enumerate
   ppx_hash
   ppx_here
   ppx_let
   ppx_sexp_conv
   ppx_sexp_value)))
