(library
 (name bopkit_cli)
 (public_name bopkit.command)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Base
  -open
  Fpath_base
  -open
  Stdio
  -open
  Cmdlang)
 (libraries
  auto-format
  base
  bopkit
  bopkit_bdd_cli
  bopkit_circuit
  bopkit_compiler
  bopkit_counter
  bopkit_pp
  bopkit_process_cli
  bopkit_pulse
  bopkit_simulator
  bopkit_sites
  bopkit_sleeper
  bopkit_syntax
  bopkit_to_c
  cmdlang
  core
  fpath
  fpath-base
  pp
  pplumbing.err
  pplumbing.log-cli
  seven_segment_display
  stdio)
 (lint
  (pps ppx_js_style -check-doc-comments))
 (preprocess
  (pps
   -unused-type-warnings=force
   ppx_compare
   ppx_enumerate
   ppx_hash
   ppx_here
   ppx_let
   ppx_sexp_conv
   ppx_sexp_value)))
