(library
 (name bopkit_command)
 (public_name bopkit.command)
 (flags :standard -w +a-4-40-41-42-44-45-66 -warn-error +a -open Core)
 (libraries
  bopkit_bdd_command
  bopkit_compiler
  bopkit_counter
  bopkit_pp
  bopkit_process_command
  bopkit_pulse
  bopkit_simulator
  bopkit_sites
  bopkit_sleeper
  bopkit_syntax
  bopkit_to_c
  core
  seven_segment_display)
 (preprocess
  (pps ppx_jane ppx_js_style -check-doc-comments)))
