(library
 (name bopkit_command)
 (public_name bopkit.command)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Base
  -open
  Err0
  -open
  Err0_handler
  -open
  Fpath_base
  -open
  Stdio
  -open
  Or_error.Let_syntax
  -open
  Commandlang)
 (libraries
  base
  bopkit_bdd_command
  bopkit_compiler
  bopkit_counter
  bopkit_pp
  bopkit_process_command
  bopkit_pulse
  bopkit_simulator
  bopkit_sites
  bopkit_sleeper
  bopkit_syntax
  bopkit_to_c
  commandlang
  core
  err0
  err0-handler
  fpath
  fpath-base
  seven_segment_display
  stdio)
 (lint
  (pps ppx_js_style -check-doc-comments))
 (preprocess
  (pps
   -unused-type-warnings=force
   ppx_compare
   ppx_enumerate
   ppx_hash
   ppx_here
   ppx_let
   ppx_sexp_conv
   ppx_sexp_value)))
