(library
 (name bopkit_compiler)
 (public_name bopkit.compiler)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Fpath_base
  -open
  Core)
 (libraries
  appendable-list
  bit_utils
  bopkit
  bopkit_cds_optimizer
  bopkit_circuit
  bopkit_pp
  bopkit_sites
  bopkit_syntax
  bopkit_topological_sort
  core
  core_unix.command_unix
  error-log
  fpath
  fpath-base
  graphics
  parsing-utils
  unix)
 (lint
  (pps ppx_js_style -check-doc-comments))
 (preprocess
  (pps
   ppx_compare
   ppx_enumerate
   ppx_fields_conv
   ppx_hash
   ppx_here
   ppx_let
   ppx_sexp_conv
   ppx_sexp_value)))
