(library
 (name bopkit_compiler)
 (public_name bopkit.compiler)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Base
  -open
  Loc0
  -open
  Err0
  -open
  Fpath_base
  -open
  Or_error.Let_syntax
  -open
  Commandlang)
 (libraries
  appendable-list
  base
  bit_utils
  bopkit
  bopkit_cds_optimizer
  bopkit_circuit
  bopkit_pp
  bopkit_sites
  bopkit_syntax
  bopkit_topological_sort
  commandlang
  core
  err0
  fpath
  fpath-base
  graphics
  loc0
  parsing-utils
  unix)
 (lint
  (pps ppx_js_style -check-doc-comments))
 (preprocess
  (pps
   -unused-type-warnings=force
   ppx_compare
   ppx_enumerate
   ppx_fields_conv
   ppx_hash
   ppx_here
   ppx_let
   ppx_sexp_conv
   ppx_sexp_value)))
