(library
 (name bopkit_compiler)
 (public_name bopkit.compiler)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Bopkit_libs_stdlib
  -open
  Base
  -open
  Fpath_base
  -open
  Pplumbing_err
  -open
  Cmdlang)
 (libraries
  base
  bit_utils
  bopkit
  bopkit_cds_optimizer
  bopkit_circuit
  bopkit_libs_stdlib
  bopkit_parser
  bopkit_pp
  bopkit_sites
  bopkit_topological_sort
  cmdlang
  core
  fpath
  fpath-base
  loc
  parsing-utils
  pp
  pplumbing-err)
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess
  (pps
   -unused-type-warnings=force
   ppx_compare
   ppx_enumerate
   ppx_fields_conv
   ppx_hash
   ppx_here
   ppx_let
   ppx_sexp_conv
   ppx_sexp_value)))
