(ocamllex lexer)

(menhir
 (modules
  tokens
  arithmetic
  conditional
  include
  parameter
  memory
  external
  parser)
 (merge_into parser))

(library
 (name bopkit_parser)
 (public_name bopkit.syntax)
 (flags :standard -w +a-4-40-41-42-44-45-48-66 -warn-error +a -open Core)
 (libraries bopkit comments-parser core fpath loc parsing-utils))
