(ocamllex lexer)

(menhir
 (modules
  tokens
  arithmetic
  conditional
  include
  parameter
  memory
  external
  parser)
 (merge_into parser))

(library
 (name bopkit_parser)
 (public_name bopkit.syntax)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Bopkit_libs_stdlib
  -open
  Core)
 (libraries
  bopkit
  bopkit_libs_stdlib
  comments_parser
  core
  fpath
  loc
  parsing-utils))
