(library
 (name bopkit_process_cli)
 (public_name bopkit.process-cli)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Base
  -open
  Fpath_base
  -open
  Pplumbing_err
  -open
  Pplumbing_log_cli
  -open
  Cmdlang)
 (libraries
  auto-format
  base
  bopkit_process
  bopkit_process_interpreter
  bopkit_process_parser
  bopkit_process_pp
  cmdlang
  fpath
  fpath-base
  parsing-utils
  pp
  pplumbing-err
  pplumbing-log-cli)
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess
  (pps
   -unused-type-warnings=force
   ppx_compare
   ppx_enumerate
   ppx_hash
   ppx_here
   ppx_let
   ppx_sexp_conv
   ppx_sexp_value)))
